@@ -31,3 +31,13 @@ map.scrollWrapX=false
 
 map.showTerritoryNames=true
 
+# screenshot overlay stuff
+screenshot.title.x=500
+screenshot.title.y=1720
+screenshot.title.color=000000
+screenshot.title.font.size=20
+screenshot.stats.enabled=true
+screenshot.stats.x=500
+screenshot.stats.y=1724
+screenshot.stats.text.color=000000
+screenshot.stats.border.color=FFFFFF
