@@ -1,4 +1,6 @@
 Changes for 1.3.2.3
+* Fixed bug in validation of non-combat movement of paratroopers. (veqryn)
+
 * Fixed error where allied air on defending carriers may not shoot at non-sub units under certain conditions. (veqryn)
 
 * Fixed error where after a player got paratroopers, ships no longer had their movement validated correctly. (veqryn)
